cmake_minimum_required(VERSION 3.21)
project(CSC272Worksheet)

set(CMAKE_CXX_STANDARD 14)

add_executable(CSC272Worksheet main.cpp )
add_executable(recursive recursive.cpp)
add_executable(factor factorit.cpp)
add_executable(employe Employee.cpp)
add_executable(employee employeetwo.cpp)
add_executable(account Account.cpp)
